<resources>
    <string name="app_name">SemesterProject</string>
    <string name="app_title">Memory Match</string>
    <string name="start_button">Start Game</string>
    <string name="high_button">High Scores</string>
    <string name="settings_button">Settings</string>
    <string name="help_button">Help</string>
    <string name="select_title">Memory Match Game Select</string>
    <string name="back_button">Back</string>
    <string name="timer">Timer</string>
    <string name="counter">Counter</string>
    <string name="score_title">Memory Match High Scores</string>
    <string name="settings_title">Memory Match Settings</string>
    <string name="sound_button">Sound</string>
    <string name="music_button">Music</string>
    <string name="help_title">Memory Match Help</string>
    <string name="title_activity_game_select">game_select</string>
    <string name="game1">Game1</string>
    <string name="game2">Game2</string>
    <string name="game3">Game3</string>
    <string name="username">User Name</string>
    <string name="title_activity_user_name">user_name</string>
    <string name="viewusername">USER NAME</string>
    <string name="adduser">ADD</string>

    <string name="savebutton">Save Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Home">Home</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
